@@ -77,6 +77,12 @@ t/test30-fork.0.rdt
 t/test30-fork.0.x
 t/test30-fork.1.rdt
 t/test30-fork.1.x
+t/test40pmc.p
+t/test40pmc.pm
+t/test40pmc.pm.x
+t/test40pmc.pmc
+t/test40pmc.rdt
+t/test40pmc.x
 t/test50-disable.p
 t/test50-disable.rdt
 t/test50-disable.x
