@@ -1,0 +1,12 @@
+# Profile data generated by Devel::NYTProf::Reader
+# More information at http://search.cpan.org/dist/Devel-NYTProf/
+# Format: time,calls,time/call,code
+0,0,0,# this is test14.pmc which perl will load in preference to test14.pmc
+0,0,0,# (if it's newer than test14.pm)
+0,0,0,package test40pmc;
+0,0,0,
+0,0,0,sub foo {
+0,1,0,1;
+0,0,0,}
+0,0,0,
+0,0,0,1;
