@@ -4,6 +4,10 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
 (As of $Date$ $Revision$)
 
+=head2 Changes in Devel::NYTProf
+
+  Added support for .pmc files.
+
 =head2 Changes in Devel::NYTProf 2.02 (svn r361) 24 Jul 2008
 
   Fixed colors to use the median (not average) deviation from the median value.
